RESOLVED FIXED219258
https://collab-project.github.io/videojs-record/demo/video-only.html is not working
https://bugs.webkit.org/show_bug.cgi?id=219258
Summary https://collab-project.github.io/videojs-record/demo/video-only.html is not w...
youenn fablet
Reported 2020-11-23 06:39:40 PST
Attachments
Patch (10.27 KB, patch)
2020-11-23 08:49 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-11-23 06:40:19 PST
youenn fablet
Comment 2 2020-11-23 08:49:32 PST
EWS
Comment 3 2020-11-26 16:48:53 PST
Committed r270171: <https://trac.webkit.org/changeset/270171> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414804 [details].
Truitt Savell
Comment 4 2020-12-01 12:51:24 PST
The changes in https://trac.webkit.org/changeset/270171/webkit has introduced a failing test on iOS http/wpt/mediarecorder/set-srcObject-MediaStream-Blob.html History: https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fmediarecorder%2Fset-srcObject-MediaStream-Blob.html Diff: --- /Volumes/Data/slave/ios-simulator-14-release-tests-wk2/build/layout-test-results/http/wpt/mediarecorder/set-srcObject-MediaStream-Blob-expected.txt +++ /Volumes/Data/slave/ios-simulator-14-release-tests-wk2/build/layout-test-results/http/wpt/mediarecorder/set-srcObject-MediaStream-Blob-actual.txt @@ -1,4 +1,4 @@ -PASS Setting srcObject to MediaStream and then Blob +FAIL Setting srcObject to MediaStream and then Blob promise_test: Unhandled rejection with value: object "AbortError: The operation was aborted."
Note You need to log in before you can comment on or make changes to this bug.