https://collab-project.github.io/videojs-record/demo/video-only.html is not working https://bugs.webkit.org/show_bug.cgi?id=219258 <rdar://problem/69759808>

Reviewed by Eric Carlson.

Source/WebCore:

Make 'HTMLMediaElement.srcObject = blob' functional by making sure to register a blob URL before trying to load.
Clean-up internal slots when srcObject is set to make sure we do not load a MediaStream even if the current MediaProvider is a Blob.

Fix a Use-After-Move bug that can be triggered in case of synchronous media loading failure.

Test: http/wpt/mediarecorder/set-srcObject-MediaStream-Blob.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::~HTMLMediaElement):
(WebCore::HTMLMediaElement::setSrcObject):
(WebCore::HTMLMediaElement::loadResource):
* html/HTMLMediaElement.h:
* platform/graphics/avfoundation/objc/WebCoreAVFResourceLoader.mm:
(WebCore::WebCoreAVFResourceLoader::startLoading):

Source/WebKit:

Fixed a potential null pointer crash in case load is aborted by WebCore at creation time.

* WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::requestResource):

LayoutTests:

* http/wpt/mediarecorder/set-srcObject-MediaStream-Blob-expected.txt: Added.
* http/wpt/mediarecorder/set-srcObject-MediaStream-Blob.html: Added.


Canonical link: https://commits.webkit.org/231880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270171 268f45cc-cd09-0410-ab3c-d52691b4dbfc